<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@id/menuHome">
    <fragment
        android:id="@+id/menuHome"
        android:name="co.kit.gfg.chatapp.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home" />
    <fragment
        android:id="@+id/menuHints"
        android:name="co.kit.gfg.chatapp.HintsFragment"
        android:label="@string/hints"
        tools:layout="@layout/fragment_hints" />
    <fragment
        android:id="@+id/menuDeveloper"
        android:name="co.kit.gfg.chatapp.DevelopersFragment"
        android:label="@string/developers"
        tools:layout="@layout/fragment_developers" />
    <fragment
        android:id="@+id/menuAboutUs"
        android:name="co.kit.gfg.chatapp.AboutFragment"
        android:label="@string/about_us"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/menuSettings"
        android:name="co.kit.gfg.chatapp.SettingsFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/menuFeedback"
        android:name="co.kit.gfg.chatapp.FeedbackFragment"
        android:label="@string/feedback"
        tools:layout="@layout/fragment_feedback" />
    <fragment
        android:id="@+id/menuRateUs"
        android:name="co.kit.gfg.chatapp.RateUsFragment"
        android:label="@string/rate_us"
        tools:layout="@layout/fragment_rate_us" />
</navigation>