<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <androidx.constraintlayout.widget.ConstraintLayout
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_centerInParent="true">

       <TextView
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:layout_marginTop="340sp"
           android:text="@string/connection_status"
           android:padding="10sp"
           android:textAlignment="center"
           app:layout_constraintBottom_toBottomOf="parent"
           app:layout_constraintEnd_toEndOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           app:layout_constraintTop_toTopOf="parent" />


   </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout
        android:layout_marginTop="200dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"

            android:orientation="vertical">




            <TextView
                android:id="@+id/user_profile_name"
                android:layout_marginTop="120dp"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold"
                />
            <TextView
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:text="@string/user_id"
                android:textAlignment="center"
                android:textSize="18sp" />


        </LinearLayout>


    </LinearLayout>


</RelativeLayout>
